--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 </head>
 <body>
     <header>
-        <img src="/assets/images/newlogo.png" alt="almali-logo">
+       <a href="."> <img src="/assets/images/newlogo.png" alt="almali-logo"></a>
         <input type="text" id="Search" name="Search" placeholder="Mən axtarıram...">
         <i class="fa-solid fa-magnifying-glass" style="color: white; font-size: 25px; background-color: rgb(238, 39, 39); padding: 10px 15px; cursor: pointer;"></i>
         <i class="fa-solid fa-shuffle" style="color: #000000; font-size: 22px;padding: 10px 0 0 10px ; cursor: pointer;">  |<span class="badge text-bg-danger" style="position: absolute; margin:-7px -21px; font-size: 9px;">0</span></i>
         <i class="fa-solid fa-bag-shopping" style="color: #000000; font-size: 22px;padding: 10px 0 0 10px ; cursor: pointer;"> |<span class="badge text-bg-danger" style="position: absolute; margin:-7px -21px; font-size: 9px;">0</span></i>
     </header>
     <div class="resheader">
-        <a class="burger"href="#"><i class="fa-solid fa-bars" style="color: #000000; font-size: 22px;margin-top: 20px; align-items: flex-start;"></i></a>
+        <a class="burger"href="#"><i class="fa-solid fa-bars" style="color: #000000; font-size: 22px;margin-top: 20px; align-items: flex-start;"><span>MENU</span></i></a>
         <img src="/assets/images/newlogo.png" alt="almali-logo">
         <i class="fa-solid fa-bag-shopping" style="color: #000000; font-size: 22px;padding: 10px 0 0 10px ; cursor: pointer; margin-top: 10px;"><span class="badge text-bg-danger" style="position: absolute; margin:-5px -12px; font-size: 9px;">0</span></i>
     </div>
@@ -27,8 +27,8 @@
          <input type="text" id="Search2" name="Search2" placeholder="Mən axtarıram...">
     </div>
     <div class="dropdown">
-      <div class="phonediv">
-        <a class="dpPhone"href="#"><b>TELEFONLAR VƏ PLANŞETLƏR</b> </a>
+        <a class="exit" href=""><i class="fa-solid fa-xmark" style="color: #000000;"></i></a>
+        <a class="dpPhone"href="#"><b>TELEFONLAR VƏ PLANŞETLƏR</b> <i id="chevron" class="fa-solid fa-chevron-right" style="color: #000000; float: right;"></i> </a>
         <a class="phoneOK" href="#">TELEFONLAR
             <ul class="dpPhoneUl">
                 <li>
@@ -85,65 +85,13 @@
                  </li>
             </ol>
         </a>
-      </div>
-            <a class="watchOK" href="#"><b>SMART SAATLAR</b>
-                <!-- <ol>
-                    <li>
-                        <a href="">APPLE</a> 
-                     </li>
-                     <li>
-                         <a href="">SAMSUNG</a>                   
-                     </li>
-                     <li>
-                         <a href="">HUAWEI</a>                    
-                     </li>
-                     <li>
-                         <a href="">MI</a>                  
-                     </li>
-                     <li>
-                         <a href="">ONEPLUS</a>
-                     </li>
-                     <li>
-                         <a href="">DİGƏR</a>
-                     </li>
-                </ol> -->
-            </a>
-            <a class="tvOK" href="#"><b>TV VƏ AUDIO</b>
-            <!-- <ul>
-                <li>
-                    <a class="tvOK-1"href="#">TELEVIZORLAR
-                        <ul>
-                            <li>
-                                <a href="">MI TV</a>
-                            </li>
-                            <li>
-                               <a href="">LG</a> 
-                            </li>
-                            <li>
-                                <a href="">SAMSUNG</a>                   
-                            </li>
-                        </ul>
-                    </a>
-                </li>
-                <li>
-                    <a href="">PLAYERLƏR</a>
-                </li>
-                <li>
-                    <a href="">EV KINOTEATRLAR</a>
-                </li>
-                <li>
-                    <a href="">PORTATİV AKUSTİKA</a>
-                </li>
-                <li>
-                    <a href="">QULAQLIQLAR</a>
-                </li>
-            </ul> -->
-            </a>
-        <a href="#"><b>FOTO VƏ VIDEO </b></a>
-        <a href="#"><b>NOUTBUKLAR VƏ PC</b></a>
-        <a href="#"><b>OYUN KONSOLLARI</b></a>
-        <a href="#"><b>MƏİŞƏT AVADANLIQLARI</b></a>
-        <a href="#"><b>DİGƏR MƏHSULLAR</b></a>
+            <a class="watchOK" href="#"><b>SMART SAATLAR <i class="fa-solid fa-chevron-right" style="color: #000000; float: right;"></i> </b> </a>
+            <a class="tvOK" href="#"><b>TV VƏ AUDIO <i class="fa-solid fa-chevron-right" style="color: #000000;float: right;"></i> </b></a>
+        <a href="#"><b>FOTO VƏ VIDEO <i class="fa-solid fa-chevron-right" style="color: #000000; float: right;"></i>  </b></a>
+        <a href="#"><b>NOUTBUKLAR VƏ PC <i class="fa-solid fa-chevron-right" style="color: #000000; float: right;"></i> </b></a>
+        <a href="#"><b>OYUN KONSOLLARI <i class="fa-solid fa-chevron-right" style="color: #000000; float: right;"></i> </b></a>
+        <a href="#"><b>MƏİŞƏT AVADANLIQLARI <i class="fa-solid fa-chevron-right" style="color: #000000; float: right;"></i> </b></a>
+        <a href="#"><b>DİGƏR MƏHSULLAR <i class="fa-solid fa-chevron-right" style="color: #000000; float: right;"></i> </b></a>
         <a href="#"><b>JABRA</b></a>
     </div>
     <div class="navbar">
